--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,3 +235,49 @@ input[type=submit] {
     padding: 10px 30px;
     cursor: pointer;
 }
+
+
+
+/* media queries */
+
+
+@media screen and (max-width: 980px) {
+    #main-container {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    #main-container {
+        max-width: 85%;
+        align: center;
+
+    }
+}
+
+@media screen and (max-width: 640px) {
+    #masthead {
+        position: static;
+    }
+    
+    #main-container {
+        max-width: 85%;
+
+    }
+
+    #logo {
+        width: 100%;
+        text-align: center;
+    }
+
+    nav {
+        width: 100%;
+        text-align: center;
+    }
+
+    img.auth-image {
+        width: 100%;
+    }
+
+    
+}
