--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,6 +162,9 @@ footer {
     text-align: center;
     width: 100%;
     height: 50px;
+    position: fixed;
+    bottom: 0;
+    
 }
 
 /* portfolio */
@@ -238,6 +241,8 @@ input[type=submit] {
 
 
 
+
+
 /* media queries */
 
 
@@ -276,8 +281,13 @@ input[type=submit] {
 
     img.auth-image {
         width: 100%;
-        
+
     }
+
+    .auth-image {
+        margin-bottom: 10px
+    }
+
 
 
 }
